--- a/README
+++ b/README
@@ -1,1 +1,17 @@
-RabbitMQ WIP
+
+WTSI::NPG::RabbitMQ::Client is a convenience wrapper around
+AnyEvent::RabbitMQ which provides these features:
+
+ - Sets up default callbacks for events fired while performing common
+   messaging tasks, such as connecting and disconnecting from the
+   server, declaring and deleting exchanges and queues, binding and
+   unbinding queues and publishing and consuming messages. The
+   callbacks for these operations are stored as Moose attributes and
+   may be customised.
+
+ - Provides an option to create automatically and use AnyEvent::CondVar
+   objects where operations are required to block.
+
+ - Adds argument checking and logging using Log4perl.
+
+Tests require an AMQP server to be running on localhost.
