--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-WTSI::NPG::RabbitMQ::Client is a convenience wrapper around
+WTSI::DNAP::RabbitMQ::Client is a convenience wrapper around
 AnyEvent::RabbitMQ which provides these features:
 
  - Sets up default callbacks for events fired while performing common
